--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,10 +12,14 @@
         "sourceType": "module"
     },
     "rules": {
-        "linebreak-style": 0,
-        "no-shadow": 0,
-        "prefer-arrow-callback": 0,
+        "import/no-extraneous-dependencies": 0,
+        "no-console": 0,
         "no-underscore-dangle": 0,
-        "no-restricted-globals": 0
-    }
+        "no-restricted-globals": 0,
+        "consistent-return": 0,
+        "no-prototype-builtins": 0,
+        "linebreak-style": 0,
+        "no-new": 0
+    },
+    "plugins": ["jasmine"]
 }
