--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.4",
+    "codeceptjs": "^3.3.3",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "eslint": "^8.14.0",
@@ -23,6 +24,9 @@
     "eslint-plugin-import": "^2.26.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^4.1.0",
     "karma": "^6.3.18",
@@ -31,8 +35,10 @@
     "karma-jasmine": "^5.0.0",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
+    "puppeteer": "^13.7.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.8.0",
@@ -41,6 +47,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "idb": "^7.0.1",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
     "serviceworker-webpack-plugin": "^1.0.1",
     "sweetalert": "^2.1.2"
