Menyelesaikan End to End Test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,5 @@
         "linebreak-style": 0,
         "no-new": 0
     },
-    "plugins": ["jasmine"]
+    "plugins": ["jasmine", "codeceptjs"]
 }
